feat: Correction question 4.6
