# src/controllers/bookCollection.controller.ts
@@ -1,4 +1,4 @@
-import { Body, Controller, Get, Path, Post, Route, Tags } from "tsoa";
+import { Body, Controller, Get, Patch, Path, Post, Route, Tags } from "tsoa";
 import { BookCollectionDTO } from "../dto/bookCollection.dto";
 import { bookCollectionService } from "../services/bookCollection.service";
 
@@ -23,6 +23,19 @@ export class BookCollectionController extends Controller {
   ): Promise<BookCollectionDTO> {
     return bookCollectionService.createBookCollection(
       requestBody.book?.id!,
+      requestBody.available,
+      requestBody.state,
+    );
+  }
+
+  @Patch("{id}")
+  public async patchBookCollection(
+    @Path("id") id: number,
+    @Body() requestBody: BookCollectionDTO,
+  ): Promise<BookCollectionDTO> {
+    return bookCollectionService.updateBookCollection(
+      id,
+      requestBody.book.id,
       requestBody.available,
       requestBody.state,
     );
